--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.81.1",
     "lucide-react": "^0.546.0",
     "next": "15.3.3",
     "react": "^19.0.0",
