--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.81.1",
+    "deps": "^1.0.0",
     "lucide-react": "^0.546.0",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-paystack": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
